--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,3 +1,25 @@
 @import "node_modules/tailwindcss/base";
 @import "node_modules/tailwindcss/components";
 @import "node_modules/tailwindcss/utilities";
+
+.bg-gradient {
+    background: linear-gradient(#d7eaff, #ffe1ef);
+}
+
+.map {
+    position: relative;
+    padding-bottom: 26.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+
+.map iframe,
+.map object,
+.map embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
