--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,57 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+{{ define "main" }}
 
-    {{ $sass := resources.Get "styles/app.scss" }}
-    {{ $styles := $sass | resources.ToCSS | resources.PostCSS | minify | fingerprint | resources.PostProcess }}
-    <link rel="stylesheet" href="{{ $styles.RelPermalink }}" integrity="{{ $styles.Data.Integrity }}">
-</head>
-<body>
-
-    <!-- This example requires Tailwind CSS v2.0+ -->
+<!-- This example requires Tailwind CSS v2.0+ -->
 <div class="relative bg-white overflow-hidden">
-  <div class="max-w-7xl mx-auto">
-    <div class="relative z-10 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
-      <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-white transform translate-x-1/2" fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
-        <polygon points="50,0 100,0 50,100 0,100" />
-      </svg>
+    <div class="max-w-7xl mx-auto">
+        <div class="relative z-10 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
+            <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-white transform translate-x-1/2" fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
+                <polygon points="50,0 100,0 50,100 0,100" />
+            </svg>
 
-      <div class="relative pt-6 px-4 sm:px-6 lg:px-8">
-        <nav class="relative flex items-center justify-between sm:h-10 lg:justify-start" aria-label="Global">
-          <div class="flex items-center flex-grow flex-shrink-0 lg:flex-grow-0">
-            <div class="flex items-center justify-between w-full md:w-auto">
-              <a href="#">
-                <span class="sr-only">Workflow</span>
-                <img class="h-8 w-auto sm:h-10" src="/logo.png">
-              </a>
-              <div class="-mr-2 flex items-center md:hidden">
-                <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" aria-expanded="false">
-                  <span class="sr-only">Open main menu</span>
-                  <!-- Heroicon name: outline/menu -->
-                  <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-                  </svg>
-                </button>
-              </div>
+            <div class="relative pt-6 px-4 sm:px-6 lg:px-8">
+                <nav class="relative flex items-center justify-between sm:h-10 lg:justify-start" aria-label="Global">
+                    <div class="flex items-center flex-grow flex-shrink-0 lg:flex-grow-0">
+                        <div class="flex items-center justify-between w-full md:w-auto">
+                            <a href="#">
+                                <span class="sr-only">Workflow</span>
+                                <img class="h-8 w-auto sm:h-10" src="/logo.png">
+                            </a>
+                            <div class="-mr-2 flex items-center md:hidden">
+                                <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" aria-expanded="false">
+                                    <span class="sr-only">Open main menu</span>
+                                    <!-- Heroicon name: outline/menu -->
+                                    <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="hidden md:block md:ml-10 md:pr-4 md:space-x-8">
+                        <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Facilities</a>
+                        <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Staff</a>
+                        <a href="#" class="font-medium text-gray-500 hover:text-gray-900">FAQ</a>
+                        <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Contact</a>
+                    </div>
+                </nav>
             </div>
-          </div>
-          <div class="hidden md:block md:ml-10 md:pr-4 md:space-x-8">
-            <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Facilities</a>
 
-            <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Staff</a>
-
-            <a href="#" class="font-medium text-gray-500 hover:text-gray-900">FAQ</a>
-
-            <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Contact</a>
-          </div>
-        </nav>
-      </div>
-
-      <!--
+            <!--
         Mobile menu, show/hide based on menu open state.
 
         Entering: "duration-150 ease-out"
@@ -61,71 +46,148 @@
           From: "opacity-100 scale-100"
           To: "opacity-0 scale-95"
       -->
-      <div class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden">
-        <div class="rounded-lg shadow-md bg-white ring-1 ring-black ring-opacity-5 overflow-hidden">
-          <div class="px-5 pt-4 flex items-center justify-between">
-            <div>
-              <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="">
+            <div class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden">
+                <div class="rounded-lg shadow-md bg-white ring-1 ring-black ring-opacity-5 overflow-hidden">
+                    <div class="px-5 pt-4 flex items-center justify-between">
+                        <div>
+                            <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="">
+                        </div>
+                        <div class="-mr-2">
+                            <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+                                <span class="sr-only">Close main menu</span>
+                                <!-- Heroicon name: outline/x -->
+                                <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="px-2 pt-2 pb-3 space-y-1">
+                        <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Product</a>
+
+                        <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Features</a>
+
+                        <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Marketplace</a>
+
+                        <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Company</a>
+                    </div>
+                    <a href="#" class="block w-full px-5 py-3 text-center font-medium text-indigo-600 bg-gray-50 hover:bg-gray-100">
+                        Log in
+                    </a>
+                </div>
             </div>
-            <div class="-mr-2">
-              <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
-                <span class="sr-only">Close main menu</span>
-                <!-- Heroicon name: outline/x -->
-                <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-                </svg>
-              </button>
-            </div>
-          </div>
-          <div class="px-2 pt-2 pb-3 space-y-1">
-            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Product</a>
 
-            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Features</a>
-
-            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Marketplace</a>
-
-            <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Company</a>
-          </div>
-          <a href="#" class="block w-full px-5 py-3 text-center font-medium text-indigo-600 bg-gray-50 hover:bg-gray-100">
-            Log in
-          </a>
+            <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
+                <div class="sm:text-center lg:text-left">
+                    <h1 class="text-4xl tracking-tight font-extrabold text-gray-700 sm:text-5xl md:text-6xl">
+                        <span class="block xl:inline">Your Angelic Treasure</span>
+                        <span class="block text-blue-400 xl:inline">belongs here</span>
+                    </h1>
+                    <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
+                        We are committed to provide quality child care and education for young children of all faiths and backgrounds. Angelic Treasures provides an environment that will not only be an enjoyable learning experience, but will foster the development of your children’s social, cognitive, emotional, psychological and physical growth.
+                    </p>
+                    <div class="mt-5 sm:mt-8 sm:flex sm:justify-center lg:justify-start">
+                        <div class="rounded-md shadow">
+                            <a href="#" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-pink-400 hover:bg-pink-500 md:py-4 md:text-lg md:px-10">
+                                Get started
+                            </a>
+                        </div>
+                        <div class="mt-3 sm:mt-0 sm:ml-3">
+                            <a href="#" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 md:py-4 md:text-lg md:px-10">
+                                Book a Tour
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </main>
         </div>
-      </div>
-
-      <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
-        <div class="sm:text-center lg:text-left">
-          <h1 class="text-4xl tracking-tight font-extrabold text-gray-700 sm:text-5xl md:text-6xl">
-            <span class="block xl:inline">Your Angelic Treasure</span>
-            <span class="block text-blue-400 xl:inline">belongs here</span>
-          </h1>
-          <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-            We are committed to provide quality child care and education for young children of all faiths and backgrounds. Angelic Treasures provides an environment that will not only be an enjoyable learning experience, but will foster the development of your children’s social, cognitive, emotional, psychological and physical growth.
-          </p>
-          <div class="mt-5 sm:mt-8 sm:flex sm:justify-center lg:justify-start">
-            <div class="rounded-md shadow">
-              <a href="#" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-pink-400 hover:bg-pink-500 md:py-4 md:text-lg md:px-10">
-                Get started
-              </a>
-            </div>
-            <div class="mt-3 sm:mt-0 sm:ml-3">
-              <a href="#" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 md:py-4 md:text-lg md:px-10">
-                Book a Tour
-              </a>
-            </div>
-          </div>
-        </div>
-      </main>
     </div>
-  </div>
-  <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
-    <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full" src="/hero.jpg" alt="">
-  </div>
+    <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
+        <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full" src="/hero.jpg" alt="">
+    </div>
 </div>
 
 
+<div class="py-20">
+    <div class="container px-4 mx-auto text-center">
+        <h2 class="text-3xl font-extrabold">Location</h2>
+        <div class="bg-pink-600 pt-1 mt-2 mb-4 mx-auto w-20"></div>
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11480.51849266939!2d-79.4749458!3d43.9980462!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfb33b343189966e8!2sAngelic%20Treasures%20Christian%20Daycare%20Aurora!5e0!3m2!1sen!2sca!4v1620080499347!5m2!1sen!2sca" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+    </div>
+</div>
+
+<div class="py-20">
+    <div class="container px-4 mx-auto text-center">
+        <h2 class="text-3xl font-extrabold">Your Angelic Treasure Belongs Here</h2>
+        <div class="bg-pink-600 pt-1 mt-2 mb-4 mx-auto w-20"></div>
+        <div class="flex flex-nowrap">
+            <div class="shadow-md rounded-md flex-1 p-8 m-2">
+                <img src="/icons/growth.png" alt="" class="mx-auto mb-4">
+                <h3 class="text-xl font-bold mb-3">Growth & Development</h3>
+                <p class="text-gray-500">Our programs are focused on supporting your child’s overall development. Your child will participate in a variety of age-appropriate activities that are educational, engaging, and most importantly—fun!</p>
+            </div>
+            <div class="shadow-md rounded-md flex-1 p-8 m-2">
+                <img src="/icons/academic.png" alt="" class="mx-auto mb-4">
+                <h3 class="text-xl font-bold mb-3">Academic Advancement</h3>
+                <p class="text-gray-500">It’s never too early to set your child up for future success. With our French offerings, well-rounded curriculum, and home-away-from-home learning environment, your child will have the tools they need to thrive.</p>
+            </div>
+            <div class="shadow-md rounded-md flex-1 p-8 m-2">
+                <img src="/icons/confidence.png" alt="" class="mx-auto mb-4">
+                <h3 class="text-xl font-bold mb-3">Confidence & Communication</h3>
+                <p class="text-gray-500">At daycare, children have the opportunity to socialize with both kids and adults. They’ll gain confidence, build their self-esteem, and gain interpersonal and communication skills for when they enter grade school.</p>
+            </div>
+        </div>
+    </div>
+</div>
 
 
-</body>
-</html>
+<div class="py-20">
+    <div class="container px-4 mx-auto">
+        <div class="flex">
+            <div>
+                <img src="/about.png" alt="">
+            </div>
+            <div>
+                <h2 class="text-3xl font-extrabold">About Angelic Treasures Child Care</h2>
+                <div class="bg-pink-600 pt-1 mt-2 mb-4 w-20"></div>
+                <p class="text-gray-600 mb-2">Angelic Treasures Child Care is where quality child care and education meets family values. From French offerings to age-appropriate activities, we offer an array of programs focused on your child’s social, cognitive, emotional, psychological, and physical development. Plus, we provide an unparalleled home-away-from-home environment to ensure your child has an enjoyable and comfortable learning experience.</p>
+                <p class="text-gray-600">We love your angels as much as you do, so it’s no wonder we’re the best at what we do.</p>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<div class="bg-gradient py-20">
+    <div class="container px-4 mx-auto text-center">
+        <h2 class="text-3xl font-extrabold">See Our Facilities</h2>
+        <div class="bg-pink-600 pt-1 mt-2 mb-4 mx-auto w-20"></div>
+
+        <div class="flex flex-nowrap">
+            <div class="mx-2">
+                <img src="/facilities/1.jpeg" alt="">
+            </div>
+            <div class="mx-2">
+                <img src="/facilities/2.jpeg" alt="">
+            </div>
+            <div class="mx-2">
+                <img src="/facilities/3.jpeg" alt="">
+            </div>
+            <div class="mx-2">
+                <img src="/facilities/4.jpeg" alt="">
+            </div>
+            <div class="mx-2">
+                <img src="/facilities/5.jpeg" alt="">
+            </div>
+        </div>
+    </div>
+</div>
 
 
+<h2 class="text-3xl font-extrabold">Our Programs</h2>
+<h2 class="text-3xl font-extrabold">FAQ</h2>
+
+
+{{ end }}
