Add form, improve header

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -189,5 +189,7 @@
 <h2 class="text-3xl font-extrabold">Our Programs</h2>
 <h2 class="text-3xl font-extrabold">FAQ</h2>
 
+{{ partial "form.html" . }}
+
 
 {{ end }}
