--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,7 +30,7 @@
                     <div class="hidden md:block md:ml-10 md:pr-4 md:space-x-8">
                         <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Facilities</a>
                         <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Staff</a>
-                        <a href="#" class="font-medium text-gray-500 hover:text-gray-900">FAQ</a>
+                        <a href="#faq" class="font-medium text-gray-500 hover:text-gray-900">FAQ</a>
                         <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Contact</a>
                     </div>
                 </nav>
@@ -49,8 +49,9 @@
             <div class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden">
                 <div class="rounded-lg shadow-md bg-white ring-1 ring-black ring-opacity-5 overflow-hidden">
                     <div class="px-5 pt-4 flex items-center justify-between">
+                        {{ $webp := resources.Get "images/logo.jpg" }}
                         <div>
-                            <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="">
+                            <img class="h-8 w-auto" src="{{ $webp.RelPermalink }}" alt="">
                         </div>
                         <div class="-mr-2">
                             <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
@@ -124,17 +125,20 @@
         <div class="bg-pink-600 pt-1 mt-2 mb-4 mx-auto w-20"></div>
         <div class="flex flex-nowrap">
             <div class="shadow-md rounded-md flex-1 p-8 m-2">
-                <img src="/icons/growth.png" alt="" class="mx-auto mb-4">
+                {{ $image := resources.Get "images/icons/growth.png" }}
+                <img src="{{ $image.RelPermalink }} " alt="" class="mx-auto mb-4">
                 <h3 class="text-xl font-bold mb-3">Growth & Development</h3>
                 <p class="text-gray-500">Our programs are focused on supporting your child’s overall development. Your child will participate in a variety of age-appropriate activities that are educational, engaging, and most importantly—fun!</p>
             </div>
             <div class="shadow-md rounded-md flex-1 p-8 m-2">
-                <img src="/icons/academic.png" alt="" class="mx-auto mb-4">
+                {{ $image := resources.Get "images/icons/academic.png" }}
+                <img src="{{ $image.RelPermalink }} " alt="" class="mx-auto mb-4">
                 <h3 class="text-xl font-bold mb-3">Academic Advancement</h3>
                 <p class="text-gray-500">It’s never too early to set your child up for future success. With our French offerings, well-rounded curriculum, and home-away-from-home learning environment, your child will have the tools they need to thrive.</p>
             </div>
             <div class="shadow-md rounded-md flex-1 p-8 m-2">
-                <img src="/icons/confidence.png" alt="" class="mx-auto mb-4">
+                {{ $image := resources.Get "images/icons/confidence.png" }}
+                <img src="{{ $image.RelPermalink }} " alt="" class="mx-auto mb-4">
                 <h3 class="text-xl font-bold mb-3">Confidence & Communication</h3>
                 <p class="text-gray-500">At daycare, children have the opportunity to socialize with both kids and adults. They’ll gain confidence, build their self-esteem, and gain interpersonal and communication skills for when they enter grade school.</p>
             </div>
@@ -187,7 +191,7 @@
 
 
 <h2 class="text-3xl font-extrabold">Our Programs</h2>
-<h2 class="text-3xl font-extrabold">FAQ</h2>
+<h2 class="text-3xl font-extrabold" id="faq">FAQ</h2>
 
 {{ partial "form.html" . }}
 
