--- a/layouts/partials/form.html
+++ b/layouts/partials/form.html
@@ -1,49 +1,51 @@
-<form action="#" method="POST">
-    <div class="shadow overflow-hidden sm:rounded-md">
-        <div class="px-4 py-5 bg-white sm:p-6">
+<div class="container mx-auto">
+    <form action="#" method="POST">
+        <div class="shadow overflow-hidden sm:rounded-md">
+            <div class="px-4 py-5 bg-white sm:p-6">
 
-            <div class="mb-3">
-                <label for="first_name" class="block text-sm font-medium text-gray-700">Name of Parent</label>
-                <input type="text" name="first_name" id="first_name" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                <div class="mb-3">
+                    <label for="first_name" class="block text-sm font-medium text-gray-700">Name of Parent</label>
+                    <input type="text" name="first_name" id="first_name" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                </div>
+
+                <div class="mb-3">
+                    <label for="email_address" class="block text-sm font-medium text-gray-700">Email Address</label>
+                    <input type="text" name="email_address" id="email_address" autocomplete="email" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                </div>
+
+                <div class="mb-3">
+                    <label for="street_address" class="block text-sm font-medium text-gray-700">Phone Number</label>
+                    <input type="text" name="street_address" id="street_address" autocomplete="street-address" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                </div>
+
+                <div class="mb-3">
+                    <label for="country" class="block text-sm font-medium text-gray-700">Age of your Child</label>
+                    <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                        <option>Infant (1 - 18 months)</option>
+                        <option>Toddler (18 months - 2&half; years)</option>
+                        <option>Preschool (2&half; - 4 years)</option>
+                        <option>Kindergarten (4 - 5 years)</option>
+                        <option>Before & After Care (5 - 10 years)</option>
+                    </select>
+                </div>
+
+                <div class="mb-3">
+                    <label class="inline-flex items-center text-sm font-medium text-gray-700">
+                        <input type="radio" class="form-radio" name="accountType" value="inperson">
+                        <span class="ml-2">In-person</span>
+                    </label>
+                    <label class="inline-flex items-center ml-6 text-sm font-medium text-gray-700">
+                        <input type="radio" class="form-radio" name="accountType" value="virtual">
+                        <span class="ml-2">Virtual</span>
+                    </label>
+                </div>
+
             </div>
-
-            <div class="mb-3">
-                <label for="email_address" class="block text-sm font-medium text-gray-700">Email Address</label>
-                <input type="text" name="email_address" id="email_address" autocomplete="email" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+            <div class="px-4 py-3 bg-gray-50 text-right sm:px-6">
+                <button type="submit" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                    Send Inquiry
+                </button>
             </div>
-
-            <div class="mb-3">
-                <label for="street_address" class="block text-sm font-medium text-gray-700">Phone Number</label>
-                <input type="text" name="street_address" id="street_address" autocomplete="street-address" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-            </div>
-
-            <div class="mb-3">
-                <label for="country" class="block text-sm font-medium text-gray-700">Age of your Child</label>
-                <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
-                    <option>Infant (1 - 18 months)</option>
-                    <option>Toddler (18 months - 2&half; years)</option>
-                    <option>Preschool (2&half; - 4 years)</option>
-                    <option>Kindergarten (4 - 5 years)</option>
-                    <option>Before & After Care (5 - 10 years)</option>
-                </select>
-            </div>
-
-            <div class="mb-3">
-                <label class="inline-flex items-center text-sm font-medium text-gray-700">
-                    <input type="radio" class="form-radio" name="accountType" value="inperson">
-                    <span class="ml-2">In-person</span>
-                </label>
-                <label class="inline-flex items-center ml-6 text-sm font-medium text-gray-700">
-                    <input type="radio" class="form-radio" name="accountType" value="virtual">
-                    <span class="ml-2">Virtual</span>
-                </label>
-            </div>
-
         </div>
-        <div class="px-4 py-3 bg-gray-50 text-right sm:px-6">
-            <button type="submit" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                Send Inquiry
-            </button>
-        </div>
-    </div>
-</form>
+    </form>
+</div>
