--- a/layouts/index.html
+++ b/layouts/index.html
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                     <div class="hidden md:block md:ml-10 md:pr-4 md:space-x-8">
-                        <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Facilities</a>
+                        <a href="#facilities" class="font-medium text-gray-500 hover:text-gray-900">Facilities</a>
                         <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Staff</a>
                         <a href="#faq" class="font-medium text-gray-500 hover:text-gray-900">FAQ</a>
                         <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Contact</a>
@@ -94,7 +94,7 @@
                             </a>
                         </div>
                         <div class="mt-3 sm:mt-0 sm:ml-3">
-                            <a href="#" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 md:py-4 md:text-lg md:px-10">
+                            <a href="#contact" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 md:py-4 md:text-lg md:px-10">
                                 Book a Tour
                             </a>
                         </div>
@@ -142,7 +142,7 @@
 <div class="bg-gradient py-20">
     <div class="container px-4 mx-auto">
         <div class="text-center pb-6">
-            <h2 class="text-3xl font-extrabold">See Our Facilities</h2>
+            <h2 class="text-3xl font-extrabold" id="facilities">See Our Facilities</h2>
             <div class="bg-pink-600 pt-1 mt-2 mb-4 mx-auto w-20"></div>
         </div>
         <div class="grid grid-flow-row grid-cols-3 gap-4">
@@ -201,8 +201,16 @@
     </div>
 </div>
 
-
-<h2 class="text-3xl font-extrabold" id="faq">FAQ</h2>
+<div class="container mx-auto py-20">
+    <div class="text-center">
+        <h2 class="text-3xl font-extrabold" id="faq">FAQ</h2>
+        <div class="bg-pink-600 pt-1 mt-2 mb-4 mx-auto w-20"></div>
+    </div>
+    {{ range $.Site.Data.faq }}
+    <h5 class="text-pink-500 text-lg font-bold">{{ .question }}</h5>
+    <p class="pb-4 pt-1">{{ .answer }}</p>
+    {{ end }}
+</div>
 
 {{ partial "form.html" . }}
 
