--- a/layouts/partials/form.html
+++ b/layouts/partials/form.html
@@ -1,5 +1,5 @@
 <div class="container mx-auto">
-    <form action="#" method="POST">
+    <form action="#" method="POST" id="contact">
         <div class="shadow overflow-hidden sm:rounded-md">
             <div class="px-4 py-5 bg-white sm:p-6">
 
