--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,1 +1,5 @@
-Copyright &copy; 2021 - Angelic Treasures Christian Childcare - Privacy
+<div class="bg-gradient mt-5">
+    <div class="container mx-auto p-6">
+        &copy;{{ now.Year }} Angelic Treasures Christian Childcare
+    </div>
+</div>
