--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -12,14 +12,14 @@
     padding-top: 30px;
     height: 0;
     overflow: hidden;
-}
 
-.map iframe,
-.map object,
-.map embed {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    iframe,
+    object,
+    embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
