--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,8 +1,13 @@
+<!doctype html>
+<html lang="{{ .Site.LanguageCode }}">
+
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    {{ hugo.Generator }}
+
+    <title>{{ .Title }}</title>
 
     {{ $sass := resources.Get "styles/app.scss" }}
     {{ $styles := $sass | resources.ToCSS | resources.PostCSS | minify | fingerprint | resources.PostProcess }}
