--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ .Site.LanguageCode }}">
 {{ partial "head.html" . }}
+
 <body>
     {{ partial "header.html" . }}
     <main id="content">
@@ -8,4 +9,5 @@
     </main>
     {{ partial "footer.html" . }}
 </body>
+
 </html>
