--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,8 +7,8 @@
     <title>{{ .Title }}</title>
 
     {{ $options := dict "inlineImports" true }}
-    {{ $styles := resources.Get "styles/app.css" }}
-    {{ $styles = $styles | resources.PostCSS $options }}
+    {{ $styles := resources.Get "styles/app.scss" }}
+    {{ $styles = $styles | resources.ToCSS | resources.PostCSS $options }}
     {{ if hugo.IsProduction }}
     {{ $styles = $styles | minify | fingerprint | resources.PostProcess }}
     {{ end }}
