--- a/layouts/partials/staff.html
+++ b/layouts/partials/staff.html
@@ -1,11 +1,15 @@
-<div class="grid grid-cols-3 gap-5">
-    <div>
-        {{ $img := resources.Get .photo }}
-        <img src="{{ $img.RelPermalink }}" alt="" class="rounded-lg">
-    </div>
-    <div class="col-span-2">
-        <h3 class="text-2xl font-bold mb-1">{{ .name }}</h3>
-        <h4 class="text-pink-500 text-lg font-bold">{{ .position }}</h4>
-        <p class="text-gray-500 pt-3">{{ .bio }}</p>
+<div class="bg-white rounded-lg overflow-hidden shadow-sm text-center">
+    {{ $img := resources.Get .photo }}
+    <img src="{{ $img.RelPermalink }}" alt="" class="w-48 rounded-full mx-auto mt-6">
+    <div class="p-6">
+        <h3 class="text-2xl font-bold mb-1">
+            {{ htmlUnescape .name }}
+        </h3>
+        <h4 class="text-pink-500 text-lg font-bold">
+            {{ htmlUnescape .position }}
+        </h4>
+        <p class="pt-3 text-gray-600">
+            {{ htmlUnescape .bio }}
+        </p>
     </div>
 </div>
