--- a/layouts/index.html
+++ b/layouts/index.html
@@ -85,13 +85,13 @@
                         We are committed to provide quality child care and education for young children of all faiths and backgrounds. Angelic Treasures provides an environment that will not only be an enjoyable learning experience, but will foster the development of your children’s social, cognitive, emotional, psychological and physical growth.
                     </p>
                     <div class="mt-5 sm:mt-8 sm:flex sm:justify-center lg:justify-start">
-                        <div class="rounded-md shadow">
-                            <a href="#" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-pink-400 hover:bg-pink-500 md:py-4 md:text-lg md:px-10">
+                        <div class="rounded-full shadow">
+                            <a href="#" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-white bg-pink-400 hover:bg-pink-500 md:py-4 md:text-lg md:px-10">
                                 Get started
                             </a>
                         </div>
                         <div class="mt-3 sm:mt-0 sm:ml-3">
-                            <a href="#contact" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-200 md:py-4 md:text-lg md:px-10">
+                            <a href="#contact" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-full text-indigo-700 bg-indigo-100 hover:bg-indigo-200 md:py-4 md:text-lg md:px-10">
                                 Book a Tour
                             </a>
                         </div>
@@ -112,16 +112,24 @@
             <h2 class="text-3xl font-extrabold">Location</h2>
             <div class="bg-pink-600 pt-1 mt-2 mb-4 mx-auto w-20"></div>
         </div>
-        <div id="map" class="w-full"></div>
-
-        <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-        {{ $key := getenv "GOOGLE_MAPS_API_KEY" }}
-        <script>window.GOOGLE_MAPS_API_KEY = '{{ $key }}'</script>
-
-        {{ $scripts := resources.Get "scripts/map.ts" }}
-        {{ $options := dict "minify" true "sourceMap" "inline" }}
-        {{ $js := $scripts | js.Build $options }}
-        <script src="{{ $js.RelPermalink }}"></script>
+        <div class="grid grid-cols-3 gap-5">
+            <div class="shadow rounded-lg text-2xl text-center flex flex-col justify-around">
+                <h1>Aurora</h1>
+                <address>
+                    126 Wellington Street West<br>
+                    Unit 103<br>
+                    Aurora, Ontario<br>
+                    L4G 2N9
+                </address>
+                <span class="block">647-812-1179</span>
+                <div>
+                    <a href="tel:6478121179" class="w-full px-8 py-3 border border-transparent text-base font-medium rounded-full text-white bg-pink-400 hover:bg-pink-500 md:py-4 md:text-lg md:px-10">
+                        Call Now
+                    </a>
+                </div>
+            </div>
+            <div id="map" class="col-span-2"></div>
+        </div>
     </div>
 </div>
 
@@ -138,7 +146,6 @@
                 <p class="text-gray-600">We love your angels as much as you do, so it’s no wonder we’re the best at what we do.</p>
             </div>
         </div>
-
     </div>
 </div>
 
@@ -151,7 +158,7 @@
         <div class="grid grid-flow-row md:grid-cols-2 lg:grid-cols-3 gap-4">
             {{ $images := resources.Match "images/facilities/*" }}
             {{ range $i := $images }}
-            <div>
+            <div class="shadow-sm">
                 {{ $resized := $i.Resize "x800 webp" }}
                 <img src="{{ $resized.RelPermalink }}" alt="" class="rounded-lg">
             </div>
@@ -217,19 +224,21 @@
     {{ end }}
 </div>
 
-<div class="container px-4 mx-auto py-20">
-    <div class="text-center pb-6">
-        <h2 class="text-3xl font-extrabold" id="staff">Our Team</h2>
-        <div class="bg-pink-600 pt-1 mt-2 mb-4 mx-auto w-20"></div>
-    </div>
-    <div class="grid grid-flow-row lg:grid-cols-2 gap-5">
-        {{ range $.Site.Data.staff }}
-        {{ partial "staff.html" . }}
-        {{ end }}
+<div class="bg-gradient py-20">
+    <div class="container px-4 mx-auto">
+        <div class="text-center pb-6">
+            <h2 class="text-3xl font-extrabold" id="staff">Our Talented Team</h2>
+            <div class="bg-pink-600 pt-1 mt-2 mb-4 mx-auto w-20"></div>
+        </div>
+        <div class="grid grid-flow-row lg:grid-cols-3 gap-5">
+            {{ range $.Site.Data.staff }}
+            {{ partial "staff.html" . }}
+            {{ end }}
+        </div>
     </div>
 </div>
 
-<div class="container mx-auto">
+<div class="container mx-auto py-20">
     <div class="grid grid-flow-row lg:grid-cols-2">
         {{ partial "form.html" . }}
         <div>
