--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,4 +8,4 @@
 {{ $params := dict "GOOGLE_MAPS_API_KEY" (getenv "GOOGLE_MAPS_API_KEY") }}
 {{ $options := dict "minify" true "sourceMap" "inline" "params" $params }}
 {{ $js := $scripts | js.Build $options }}
-<script src="{{ $js.RelPermalink }}"></script>
+<script src="{{ $js.RelPermalink }}" integrity="{{ $js.Data.Integrity }}" async></script>
