--- a/layouts/partials/program.html
+++ b/layouts/partials/program.html
@@ -1,5 +1,6 @@
 <div class="bg-white rounded-lg overflow-hidden shadow-sm">
     {{ $img := resources.Get .image }}
+    {{ $img = $img.Resize "x600 webp" }}
     <img src="{{ $img.RelPermalink }}" alt="">
     <div class="p-6">
         <h3 class="text-2xl font-bold mb-1">
