Add Alpine JS for menus

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 
 <div class="relative bg-white">
     <div class="max-w-7xl mx-auto">
-        <div class="relative z-10 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
+        <div class="relative z-10 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32" x-data="{ open: false }">
 
             <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-white transform translate-x-1/2" fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
                 <polygon points="50,0 100,0 50,100 0,100" />
@@ -17,7 +17,7 @@
                                 <img class="h-8 w-auto sm:h-10" src="/logo.png">
                             </a>
                             <div class="-mr-2 flex items-center md:hidden">
-                                <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" aria-expanded="false">
+                                <button type="button" @click="open = true" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" aria-expanded="false">
                                     <span class="sr-only">Open main menu</span>
                                     <!-- Heroicon name: outline/menu -->
                                     <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -46,7 +46,14 @@
           From: "opacity-100 scale-100"
           To: "opacity-0 scale-95"
       -->
-            <div class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden">
+            <div class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden"
+                 x-show="open"
+                 x-transition:enter="duration-150 ease-out"
+                 x-transition:enter-start="opacity-0 scale-95"
+                 x-transition:enter-end="opacity-100 scale-100"
+                 x-transition:leave="duration-100 ease-in"
+                 x-transition:leave-start="opacity-100 scale-100"
+                 x-transition:leave-end="opacity-0 scale-95">
                 <div class="rounded-lg shadow-md bg-white ring-1 ring-black ring-opacity-5 overflow-hidden">
                     <div class="px-5 pt-4 flex items-center justify-between">
                         {{ $logo := resources.Get "images/logo.jpg" }}
@@ -54,7 +61,7 @@
                             <img class="h-8 w-auto" src="{{ $logo.RelPermalink }}" alt="">
                         </div>
                         <div class="-mr-2">
-                            <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+                            <button type="button" @click="open = false" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
                                 <span class="sr-only">Close main menu</span>
                                 <!-- Heroicon name: outline/x -->
                                 <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -69,9 +76,6 @@
                         <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Marketplace</a>
                         <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Company</a>
                     </div>
-                    <a href="#" class="block w-full px-5 py-3 text-center font-medium text-indigo-600 bg-gray-50 hover:bg-gray-100">
-                        Log in
-                    </a>
                 </div>
             </div>
 
@@ -99,6 +103,7 @@
                     </div>
                 </div>
             </main>
+
         </div>
     </div>
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
@@ -110,26 +115,25 @@
 
 <div class="py-20">
     <div class="container px-4 mx-auto">
-        <div class="grid grid-cols-3 gap-6">
-            <div class="shadow rounded-lg text-2xl text-center flex flex-col justify-around">
-                <div class="text-center">
+        <div class="grid md:grid-cols-3 gap-6">
+            <div class="shadow rounded-lg text-xl text-center flex flex-col justify-around">
+                <div class="text-center mt-4">
                     <h1>Aurora</h1>
                     <div class="bg-pink-600 pt-1 mt-2 mb-4 mx-auto w-20"></div>
                 </div>
-                <address>
+                <address class="not-italic">
                     126 Wellington Street West<br>
                     Unit 103<br>
                     Aurora, Ontario<br>
                     L4G 2N9
                 </address>
-                <span class="block">647-812-1179</span>
+                <span class="block mb-8">(647) 812-1179</span>
                 <div>
                     <a href="tel:6478121179" class="w-full px-8 py-3 border border-transparent text-base font-medium rounded-full text-white bg-pink-400 hover:bg-pink-500 md:py-4 md:text-lg md:px-10">
                         Call Now
                     </a>
                 </div>
             </div>
-            {{/* <div id="map" class="col-span-2"></div> */}}
             {{ $map := resources.Get "images/map.png" }}
             <img src="{{ $map.RelPermalink }}" alt="" class="w-full col-span-2 rounded-lg shadow" loading="lazy">
         </div>
@@ -147,6 +151,25 @@
             <img src="{{ $img.RelPermalink }}" alt="" class="rounded-lg shadow">
         </div>
         <div class="col-span-2 row-span-2 row-start-1 col-start-2 ml-10">
+            <div class="h-full flex flex-col align-middle justify-center">
+                <h2 class="text-3xl font-extrabold">About Angelic Treasures Child Care</h2>
+                <div class="bg-pink-600 pt-1 mt-2 mb-4 w-20"></div>
+                <p class="text-gray-600 mb-2">Angelic Treasures Child Care is where quality child care and education meets family values. From French offerings to age-appropriate activities, we offer an array of programs focused on your child’s social, cognitive, emotional, psychological, and physical development. Plus, we provide an unparalleled home-away-from-home environment to ensure your child has an enjoyable and comfortable learning experience.</p>
+                <p class="text-gray-600">We love your angels as much as you do, so it’s no wonder we’re the best at what we do.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container mx-auto">
+    <div class="grid lg:grid-cols-3">
+        <div>
+            {{ $img := resources.Get "images/untitled-280.jpg" }}
+            <img src="{{ $img.RelPermalink }}" alt="" class="rounded-lg shadow transform scale-90 rotate-6 translate-y-14">
+            {{ $img := resources.Get "images/untitled-606.jpg" }}
+            <img src="{{ $img.RelPermalink }}" alt="" class="rounded-lg shadow transform scale-75 -rotate-6 translate-x-2 -translate-y-14">
+        </div>
+        <div class="col-span-2 ml-10">
             <div class="h-full flex flex-col align-middle justify-center">
                 <h2 class="text-3xl font-extrabold">About Angelic Treasures Child Care</h2>
                 <div class="bg-pink-600 pt-1 mt-2 mb-4 w-20"></div>
