--- a/layouts/index.html
+++ b/layouts/index.html
@@ -119,7 +119,7 @@
             <div class="shadow rounded-lg text-xl text-center flex flex-col justify-around">
                 <div class="text-center mt-4">
                     <h1>Aurora</h1>
-                    <div class="bg-pink-600 pt-1 mt-2 mb-4 mx-auto w-20"></div>
+                    <div class="divider"></div>
                 </div>
                 <address class="not-italic">
                     126 Wellington Street West<br>
