--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,8 +9,8 @@
     <link rel="icon" type="image/png" href="/favicon.png">
 
     {{ $options := dict "inlineImports" true }}
-    {{ $styles := resources.Get "styles/app.scss" }}
-    {{ $styles = $styles | resources.ToCSS | resources.PostCSS $options }}
+    {{ $styles := resources.Get "styles/app.css" }}
+    {{ $styles = $styles | resources.PostCSS $options }}
     {{ if hugo.IsProduction }}
     {{ $styles = $styles | minify | fingerprint | resources.PostProcess }}
     {{ end }}
